# hydra-program

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  image-compression.yml  publish.yml
docs/: Makefile  README.md
docs/source/: changelog.md  conf.py  configuration.md  contributing.md  examples.md  getting_started.md  index.md  installation.md
docs/source/_static/: custom.css
docs/source/api/: hydra_program.md  modules.md
hydra_program/cli/: hpinit.py  hprun.py
hydra_program/config_templates/: hprun.yaml
hydra_program/config_templates/hydra/: default.yaml
hydra_program/config_templates/hydra/help/: hprun.yaml
hydra_program/config_templates/path/: default.yaml
hydra_program/core/: serialization.py  utils.py
