[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydra-program"
description = "A hydra-based program running framework."
readme = "README.md"
version = "0.1.1"
authors = [{ name = "Anke Tang", email = "tang.anke@foxmail.com" }]
license-files = ["LICENSE"]
requires-python = ">= 3.9"
dependencies = ["hydra-core", "rich", "bidict"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "isort", "flake8", "mypy"]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-autodoc-typehints",
    "myst-parser",
    "sphinx-autobuild",
]

[project.urls]
Repository = "https://github.com/tanganke/hydra-program"
Homepage = "https://github.com/tanganke/hydra-program"
Issues = "https://github.com/tanganke/hydra-program/issues"

[project.scripts]
hprun = "hydra_program.cli.hprun:main"
hpinit = "hydra_program.cli.hpinit:main"

[tool.isort]
profile = "black"

[tool.setuptools]
include-package-data = true
package-dir = { "hydra_program" = "hydra_program" }

[tool.setuptools.package-data]
hydra_program = ['config_templates/**/*']
